--- a/src/app/admin/pages/layout-page/layout-page.component.html
+++ b/src/app/admin/pages/layout-page/layout-page.component.html
@@ -13,11 +13,11 @@
 
         <span class="block w-[1px] h-[80%] bg-[#104D73]"></span>
 
-        <a href="" routerLink="./lista-proyectos"
-          (click)="updateButtonLabel('proyecto')"
+        <a href="" routerLink="./lista-noticias"
+          (click)="updateButtonLabel('noticia')"
           class="hover:text-blue-utpl"
-          [ngClass]="{'text-blue-utpl':valueLabel == 'proyecto'}"
-        >PROYECTOS</a>
+          [ngClass]="{'text-blue-utpl':valueLabel == 'noticia'}"
+        >NOTICIAS</a>
 
         <span class="block w-[1px] h-[80%] bg-[#104D73]"></span>
 
