--- a/src/app/admin/pages/new-project/new-project.component.html
+++ b/src/app/admin/pages/new-project/new-project.component.html
@@ -47,7 +47,7 @@
 
     <div class="w-full flex items-center justify-between">
       <!-- Retroceder -->
-      <button class="flex my-5 p-2 items-center rounded-full hover:bg-yellow-utpl transition duration-300 ease-in-out" routerLink="/radio-utpl/admin/lista-proyectos">
+      <button class="flex my-5 p-2 items-center rounded-full hover:bg-yellow-utpl transition duration-300 ease-in-out" routerLink="/radio-utpl/admin/lista-noticias">
         <svg width="36" height="28" viewBox="0 0 46 38" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M2.16634 19.0003L43.833 19.0003M2.16634 19.0003L18.833 2.33366M2.16634 19.0003L18.833 35.667" stroke="#06446F" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
@@ -66,7 +66,7 @@
       <!-- Seccion del Titulo -->
       <div>
         <div class="pb-2 text-wrap">
-          <p class="text-content-1"> <strong>Titulo de referencia </strong><span class="text-content-2 text-[#9D9D9D]">Este título no se visualiza en el proyecto, solo es para mantener una organización el el administrador</span></p>
+          <p class="text-content-1"> <strong>Titulo de referencia </strong><span class="text-content-2 text-[#9D9D9D]">Este título no se visualiza en la noticia, solo es para mantener una organización el el administrador</span></p>
         </div>
 
         <input type="text" formControlName="title"
@@ -121,7 +121,8 @@
       <!-- Seccion Resumen -->
       <div class="mb-6">
         <div class="pb-2 text-wrap">
-          <p class="text-content-1"> <strong>Resumen </strong><span class="text-content-2 text-[#9D9D9D]">Debe contener de entre 15 y 20 palabras</span></p>
+          <p *ngIf="!summaryError" class="text-content-1"> <strong>Resumen </strong><span class="text-content-2 text-[#9D9D9D]">Debe contener de entre 15 y 20 palabras</span></p>
+          <p *ngIf="summaryError" class="text-content-1"> <strong>Resumen </strong><span class="text-content-2 text-[#ff0000]">Debe contener de entre 15 y 20 palabras</span></p>
         </div>
 
         <textarea name="frame" id="frame" formControlName="summary"
@@ -148,13 +149,13 @@
         <button
           *ngIf="this.currentRoute.includes('nuevo')"
           class="p-2 text-white bg-[#00ACC1] rounded-lg hover:bg-blue-utpl"
-          (click)="this.createProject()"
-        >Crear Proyecto</button>
+          (click)="createProject()"
+        >Crear Noticia</button>
         <button
           *ngIf="this.currentRoute.includes('editar')"
           class="p-2 text-white bg-[#00ACC1] rounded-lg hover:bg-blue-utpl"
-          (click)="this.createProject()"
-        >Actualizar Proyecto</button>
+          (click)="createProject()"
+        >Actualizar Noticia</button>
       </div>
     </form>
 
