--- a/src/app/radio/components/footer/footer.component.html
+++ b/src/app/radio/components/footer/footer.component.html
@@ -19,7 +19,7 @@
 
               <li><a href="radio-utpl/inicio" class="hover:underline">Inicio</a></li>
               <li><a href="radio-utpl/programacion" class="hover:underline">Programación</a></li>
-              <li><a href="radio-utpl/proyectos" class="hover:underline">Proyectos</a></li>
+              <li><a href="radio-utpl/noticias" class="hover:underline">Noticias</a></li>
 
             </ul>
           </div>
@@ -40,7 +40,7 @@
             <li><address class="not-italic">PARIS SYN PRAGA edif. Nro. 2 Segunda planta.</address></li>
             <li><p> Teléfono:  3701444 - Ext.2498</p></li>
             <li class="flex space-x-1">
-               <p>Correo electronico:</p> <p class="hover:underline">{{' radio@utpl.edu.ec'}}</p>
+               <p>Correo electrónico:</p> <p class="hover:underline">{{' radio@utpl.edu.ec'}}</p>
             </li>
           </ul>
         </div>
