--- a/src/app/radio/pages/about-us-page/about-us-page.component.html
+++ b/src/app/radio/pages/about-us-page/about-us-page.component.html
@@ -10,7 +10,7 @@
         <!-- <P>HISTORIA</P> -->
       </h2>
 
-      <p class="text-center my-5">Historia de Radio UTPL: Un Espacio de Innovación y Compromiso Educativo</p>
+      <p class="text-center my-5">Historia de Radio UTPL: Un espacio de innovación y compromiso educativo</p>
       <p class="text-justify my-5">La Universidad Técnica Particular de Loja (UTPL) ha destacado por su innovación y compromiso con la educación y la comunicación. Radio UTPL, creada como un laboratorio para estudiantes de Comunicación, ha evolucionado en un canal de comunicación universitario que genera contenidos informativos, pedagógicos y experimentales. Este espacio fomenta la creatividad y el aprendizaje práctico, permitiendo que estudiantes, docentes y administrativos propongan y exploren diversas formas de comunicación gracias a tecnologías avanzadas.</p>
       <p class="text-justify my-5">Actualmente, Radio UTPL es un medio consolidado que no solo enriquece el entorno universitario, sino que también beneficia a la comunidad local mediante la difusión de contenidos relevantes y de alta calidad. Su impacto perdurable refleja el compromiso de la UTPL con la innovación, contribuyendo significativamente al desarrollo cultural y educativo.</p>
     </div>
