Actualizaciones front, rutas

--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -14,7 +14,7 @@
         <br><br>
         <button (click)="recoverPassword()">¿Olvidaste tu contraseña?</button>
         <br><br>
-        <a href="" [routerLink]="['/radio-utpl/auth/register']">¿No tienes una cuenta? Regístrate</a>
+        <a href="" [routerLink]="['/auth/register']">¿No tienes una cuenta? Regístrate</a>
     </section>
 </section> -->
 
