--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -8,7 +8,7 @@
         <br><br>
         <button (click)="register()">Registrarse</button>
         <br><br>
-        <a href="" [routerLink]="['/radio-utpl/auth/login']">¿Ya tienes una cuenta? Inicia Sesión</a>
+        <a href="" [routerLink]="['/auth/login']">¿Ya tienes una cuenta? Inicia Sesión</a>
     </section>
 </section> -->
 
