--- a/src/app/radio/components/footer/footer.component.html
+++ b/src/app/radio/components/footer/footer.component.html
@@ -17,9 +17,9 @@
             <h3 class="text-content-1 text-yellow-utpl font-semibold mb-4">Vínculos de Interés</h3>
             <ul class="text-content-2 space-y-2 md:space-y-6">
 
-              <li><a href="radio-utpl/inicio" class="hover:underline">Inicio</a></li>
-              <li><a href="radio-utpl/programacion" class="hover:underline">Programación</a></li>
-              <li><a href="radio-utpl/noticias" class="hover:underline">Noticias</a></li>
+              <li><a href="inicio" class="hover:underline">Inicio</a></li>
+              <li><a href="programacion" class="hover:underline">Programación</a></li>
+              <li><a href="noticias" class="hover:underline">Noticias</a></li>
 
             </ul>
           </div>
