--- a/src/app/radio/pages/project-template/project-template.component.html
+++ b/src/app/radio/pages/project-template/project-template.component.html
@@ -8,7 +8,7 @@
     <!-- Header del contenido del proyecto -->
     <div>
       <!-- Boton para regresar -->
-      <button routerLink="/radio-utpl/noticias" class="mx-5 my-11 p-2 rounded-2xl hover:bg-yellow-utpl transition duration-300 ease-in-out">
+      <button routerLink="/noticias" class="mx-5 my-11 p-2 rounded-2xl hover:bg-yellow-utpl transition duration-300 ease-in-out">
         <svg width="46" height="38" viewBox="0 0 46 38" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M2.16634 19.0003L43.833 19.0003M2.16634 19.0003L18.833 2.33366M2.16634 19.0003L18.833 35.667" stroke="#06446F" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
