--- a/src/app/radio/pages/home-page/home-page.component.html
+++ b/src/app/radio/pages/home-page/home-page.component.html
@@ -51,70 +51,121 @@
           </div>
 
           <!-- Los 3 Proyectos mas recientes -->
-          <div class="w-full grid gap-10 text-xs md:text-base" *ngIf="this.projects.length > 0" [ngClass]="{'lg:grid-cols-2 ':this.projects.length > 2}">
-            <!-- Primera Columna: Proyecto 1 -->
-            <div class="w-full h-[250px] md:h-[400px] flex flex-col">
-              <div class="h-[54%]">
-                <img class="w-full h-full rounded-md object-cover" [src]="this.projects[0].photo_url" alt="">
-              </div>
-
-              <div class="h-full p-2 flex flex-col justify-between">
-                <p class="font-semibold text-yellow-utpl"> {{this.date[0]}} </p>
-                <p class="font-bold text-white">{{this.projects[0].title | truncate:105}}</p>
-                <p class="text-white">{{this.projects[0].summary | truncate:120}}</p>
-
-                <div>
-                  <a
-                    class="w-[40%] px-5 py-1 mb-3 text-center text-xs font-semibold rounded-3xl bg-white border-2 border-white hover:bg-blue-utpl hover:text-yellow-utpl shadow-lg"
-                    routerLink='../noticias/contenido/{{this.projects[0].id}}'
-                  >Leer más..</a>
-                </div>
-              </div>
-            </div>
-
-            <!-- Segunda Columna: Proyecto 1 y 2 -->
-            <div class="w-full flex flex-col space-y-5 justify-between">
-              <!-- Segundo Proyecto -->
-              <div class="h-[150px] lg:h-[180px] flex" *ngIf="this.projects.length > 1">
-                <div class="w-[50%]">
-                  <img class="w-full h-full rounded-md object-cover" [src]="this.projects[1].photo_url" alt="">
-                </div>
-
-                <div class="w-[50%] pl-2 py-2 flex flex-col justify-between">
-                  <p class="font-semibold text-yellow-utpl"> {{this.date[1]}} </p>
-                  <p class="font-bold text-white">{{this.projects[1].title | truncate:85}}</p>
-                  <p class="text-white">{{this.projects[1].summary | truncate:80}}</p>
-
-                  <div>
-                    <a
-                      class="w-[40%] px-5 py-1 text-center text-xs font-semibold rounded-3xl bg-white border-2 border-white hover:bg-blue-utpl hover:text-yellow-utpl shadow-lg"
-                      routerLink='../noticias/contenido/{{this.projects[1].id}}'
-                    >Leer más..</a>
+          <div [ngSwitch]="projects.length">
+            <div *ngSwitchCase="1">
+              <!-- Contenido para 1 proyecto -->
+              <div class="max-w-[90%] md:max-w-[80%] lg:max-w-[30%] mx-auto grid gap-10 grid-cols-1 text-xs md:text-base place-items-center items-center">
+                <div class="w-full h-[250px] md:h-[400px] flex flex-col" *ngIf="projects.length > 0">
+                  <div class="w-full h-[54%]">
+                    <img class="w-full h-full rounded-md object-cover" [src]="projects[0].photo_url" alt="">
                   </div>
-                </div>
-              </div>
-
-              <!-- Tercer Proyecto -->
-              <div class="h-[150px] lg:h-[180px] flex" *ngIf="this.projects.length > 2">
-                <div class="w-[50%]">
-                  <img class="w-full h-full rounded-md object-cover" [src]="this.projects[2].photo_url" alt="">
-                </div>
-
-                <div class="w-[50%] pl-2 py-2 flex flex-col justify-between">
-                  <p class="font-semibold text-yellow-utpl"> {{this.date[2]}} </p>
-                  <p class="font-bold text-white">{{this.projects[2].title | truncate:85}}</p>
-                  <p class="text-white">{{this.projects[2].summary | truncate:65}}</p>
-
-                  <div>
-                    <a
-                      class="w-[40%] px-5 py-1 text-center text-xs font-semibold rounded-3xl bg-white border-2 border-white hover:bg-blue-utpl hover:text-yellow-utpl shadow-lg"
-                      routerLink='../noticias/contenido/{{this.projects[2].id}}'
-                    >Leer más..</a>
+                  <div class="h-full p-2 flex flex-col justify-between">
+                    <p class="font-semibold text-yellow-utpl"> {{date[0]}} </p>
+                    <p class="font-bold text-white">{{projects[0].title | truncate:105}}</p>
+                    <p class="text-white">{{projects[0].summary | truncate:120}}</p>
+                    <div>
+                      <a class="w-[40%] px-5 py-1 mb-3 text-center text-xs font-semibold rounded-3xl bg-white border-2 border-white hover:bg-blue-utpl hover:text-yellow-utpl shadow-lg"
+                        routerLink='../noticias/contenido/{{projects[0].id}}'>
+                        Leer más..
+                      </a>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-
+            <div *ngSwitchCase="2">
+              <!-- Contenido para 2 proyectos -->
+              <div class="max-w-[90%] md:max-w-[80%] lg:max-w-[60%] mx-auto grid gap-10 grid-cols-1 sm:grid-cols-2 text-xs md:text-base place-items-center items-center">
+                <div class="w-full h-[250px] md:h-[400px] flex flex-col" *ngIf="projects.length > 0">
+                  <div class="w-full h-[54%]">
+                    <img class="w-full h-full rounded-md object-cover" [src]="projects[0].photo_url" alt="">
+                  </div>
+                  <div class="h-full p-2 flex flex-col justify-between">
+                    <p class="font-semibold text-yellow-utpl"> {{date[0]}} </p>
+                    <p class="font-bold text-white">{{projects[0].title | truncate:105}}</p>
+                    <p class="text-white">{{projects[0].summary | truncate:120}}</p>
+                    <div>
+                      <a class="w-[40%] px-5 py-1 mb-3 text-center text-xs font-semibold rounded-3xl bg-white border-2 border-white hover:bg-blue-utpl hover:text-yellow-utpl shadow-lg"
+                        routerLink='../noticias/contenido/{{projects[0].id}}'>
+                        Leer más..
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              
+                <div class="w-full h-[250px] md:h-[400px] flex flex-col" *ngIf="projects.length > 1">
+                  <div class="w-full h-[54%]">
+                    <img class="w-full h-full rounded-md object-cover" [src]="projects[1].photo_url" alt="">
+                  </div>
+                  <div class="h-full p-2 flex flex-col justify-between">
+                    <p class="font-semibold text-yellow-utpl"> {{date[1]}} </p>
+                    <p class="font-bold text-white">{{projects[1].title | truncate:105}}</p>
+                    <p class="text-white">{{projects[1].summary | truncate:120}}</p>
+                    <div>
+                      <a class="w-[40%] px-5 py-1 mb-3 text-center text-xs font-semibold rounded-3xl bg-white border-2 border-white hover:bg-blue-utpl hover:text-yellow-utpl shadow-lg"
+                        routerLink='../noticias/contenido/{{projects[1].id}}'>
+                        Leer más..
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div *ngSwitchDefault>
+              <!-- Contenido para 3 o más proyectos -->
+              <div class="w-full gap-10 mb-10 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 justify-items-center">
+                <div class="w-full h-[250px] md:h-[400px] flex flex-col" *ngIf="projects.length > 0">
+                  <div class="w-full h-[54%]">
+                    <img class="w-full h-full rounded-md object-cover" [src]="projects[0].photo_url" alt="">
+                  </div>
+                  <div class="h-full p-2 flex flex-col justify-between">
+                    <p class="font-semibold text-yellow-utpl">{{ date[0] }}</p>
+                    <p class="font-bold text-white">{{ projects[0].title | truncate:105 }}</p>
+                    <p class="text-white">{{ projects[0].summary | truncate:120 }}</p>
+                    <div>
+                      <a class="w-[40%] px-5 py-1 mb-3 text-center text-xs font-semibold rounded-3xl bg-white border-2 border-white hover:bg-blue-utpl hover:text-yellow-utpl shadow-lg"
+                        routerLink='../noticias/contenido/{{projects[0].id}}'>
+                        Leer más..
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              
+                <div class="w-full h-[250px] md:h-[400px] flex flex-col" *ngIf="projects.length > 1">
+                  <div class="w-full h-[54%]">
+                    <img class="w-full h-full rounded-md object-cover" [src]="projects[1].photo_url" alt="">
+                  </div>
+                  <div class="h-full p-2 flex flex-col justify-between">
+                    <p class="font-semibold text-yellow-utpl">{{ date[1] }}</p>
+                    <p class="font-bold text-white">{{ projects[1].title | truncate:105 }}</p>
+                    <p class="text-white">{{ projects[1].summary | truncate:120 }}</p>
+                    <div>
+                      <a class="w-[40%] px-5 py-1 mb-3 text-center text-xs font-semibold rounded-3xl bg-white border-2 border-white hover:bg-blue-utpl hover:text-yellow-utpl shadow-lg"
+                        routerLink='../noticias/contenido/{{projects[1].id}}'>
+                        Leer más..
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              
+                <div class="w-full h-[250px] md:h-[400px] flex flex-col" *ngIf="projects.length > 2">
+                  <div class="w-full h-[54%]">
+                    <img class="w-full h-full rounded-md object-cover" [src]="projects[2].photo_url" alt="">
+                  </div>
+                  <div class="h-full p-2 flex flex-col justify-between">
+                    <p class="font-semibold text-yellow-utpl">{{ date[2] }}</p>
+                    <p class="font-bold text-white">{{ projects[2].title | truncate:105 }}</p>
+                    <p class="text-white">{{ projects[2].summary | truncate:120 }}</p>
+                    <div>
+                      <a class="w-[40%] px-5 py-1 mb-3 text-center text-xs font-semibold rounded-3xl bg-white border-2 border-white hover:bg-blue-utpl hover:text-yellow-utpl shadow-lg"
+                        routerLink='../noticias/contenido/{{projects[2].id}}'>
+                        Leer más..
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
 
         </div>
