Cambios al front e imagenes WebP

--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -13,7 +13,7 @@
 </section> -->
 
 
-<div class="w-full h-screen flex items-center justify-center bg-blue-utpl bg-cover bg-center bg-no-repeat bg-[url('https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/media%2Fimage_sesion.png?alt=media&token=06f73b1d-38d4-4cce-9264-1345d597e710')] bg-animate-fadeIn">
+<div class="w-full h-screen flex items-center justify-center bg-blue-utpl bg-cover bg-center bg-no-repeat bg-[url('https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/media%2Fimage_sesion.webp?alt=media&token=9ab586a6-2b91-4bd6-9f5c-ba33b4a4b158')] bg-animate-fadeIn">
   <!-- Seccion credenciales -->
   <div class="w-[50%] h-[75%] relative flex flex-col items-center">
 
