--- a/src/app/radio/pages/about-us-page/about-us-page.component.html
+++ b/src/app/radio/pages/about-us-page/about-us-page.component.html
@@ -15,10 +15,10 @@
       <p class="text-justify my-5">Actualmente, Radio UTPL es un medio consolidado que no solo enriquece el entorno universitario, sino que también beneficia a la comunidad local mediante la difusión de contenidos relevantes y de alta calidad. Su impacto perdurable refleja el compromiso de la UTPL con la innovación, contribuyendo significativamente al desarrollo cultural y educativo.</p>
     </div>
 
-    <div class="col-span-1 select-none">
+    <div class="col-span-1 select-none my-20">
       <img
         class="w-[80%] lg:w-[60%] mx-auto rounded-3xl shadow-md"
-        src="https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/carousel_home%2FDSC_3738.jpg?alt=media&token=9c148491-09e2-4c16-8371-eaa403e0796a"
+        src="https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/carousel_home%2FDSC_3738.webp?alt=media&token=1b7731c6-b963-4b06-8a5b-345be6969b52"
         alt="Image Radio"
       >
     </div>
@@ -29,7 +29,7 @@
   <div class="w-full px-[5%] bg-white flex-col ">
 
     <div class="relative h-[130px] sm:h-[180px] my-3 md:my-14">
-      <div class="w-full h-[75px] sm:h-[100px] rounded-full bg-blue-100 bg-[center] bg-[url('https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/carousel_home%2FDSC_3728.jpg?alt=media&token=20f13d60-5880-4008-91f0-63ffa17e736d')]">
+      <div class="w-full h-[75px] sm:h-[100px] rounded-full bg-blue-100 bg-[center] bg-[url('https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/carousel_home%2FDSC_3728.webp?alt=media&token=6910f43f-a745-45d2-901c-30e83a70bccf')]">
         <div class="w-full h-full rounded-full flex justify-center items-center bg-blue-utpl bg-opacity-50">
           <h2 class="text-title-1 font-bold text-white">EQUIPO</h2>
         </div>
