--- a/src/app/radio/pages/layout-page/layout-page.component.html
+++ b/src/app/radio/pages/layout-page/layout-page.component.html
@@ -9,7 +9,7 @@
 
     <img
       class="absolute w-full h-full object-cover"
-      src="https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/media%2Fimage_carrousel.png?alt=media&token=2e17e727-a307-48e1-82fa-ea578c449a69"
+      src="https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/media%2Fimage_carrousel.webp?alt=media&token=ec38483f-a57e-43c7-a76d-18906dbf6836"
       alt=""
     >
 
